@@ -1,63 +1,0 @@
-/*
- * (c) Copyright 2007, 2008 Hewlett-Packard Development Company, LP
- * All rights reserved.
- * [See end of file]
- */
-
-package dev;
-
-import junit.framework.Test;
-import junit.framework.TestSuite;
-
-import com.hp.hpl.jena.sdb.Store;
-import com.hp.hpl.jena.sdb.shared.StoreList;
-import com.hp.hpl.jena.sdb.util.Pair;
-
-
-public class TestAllStores
-{
-    interface TestGen { Test makeTest(String nameRoot, Store store) ; }
-    
-    static String storeList         = "testing/store-list.ttl" ;
-    static String storeListSimple   = "testing/store-list-simple.ttl" ;
-
-    static TestSuite generate(String filename, TestGen gen)
-    {
-        TestSuite ts = new TestSuite() ;
-        for ( Pair<String, Store> p : StoreList.stores(filename)) 
-        {
-            String name = p.getLeft() ;
-            Store store = p.getRight() ;
-            Test t = gen.makeTest(name, store) ;
-            ts.addTest(t) ;
-        }
-        return ts ;
-    }
-}
-
-/*
- * (c) Copyright 2007, 2008 Hewlett-Packard Development Company, LP
- * All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- * 1. Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- * 2. Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in the
- *    documentation and/or other materials provided with the distribution.
- * 3. The name of the author may not be used to endorse or promote products
- *    derived from this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
- * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
- * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
- * IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
- * NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
- * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
- * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
- * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
- * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- */
